--- a/css/styles.css
+++ b/css/styles.css
@@ -27,9 +27,10 @@ img { display: block;}
 button { cursor: pointer;}
 
 .container {
-  width: 1128px;
+  width: 1158px;
   margin-left: auto;
   margin-right: auto;
+  padding: 0 15px;
 }
 .header {
   border-bottom: 1px solid #e7e9fc;
@@ -42,14 +43,18 @@ button { cursor: pointer;}
 .header-navigation {
   display: flex;
   align-items: center;
+  padding: 24px 0 ;
 }
 
 .header-list {
   display: flex;
+  gap: 40px;
+  margin-right: 332px;
 }
 
 .address-list- {
   display: flex;
+  gap: 40px;
 }
 
 body {
@@ -66,6 +71,7 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--text-color);
+    margin-right: 76px
     }
 
   .link {
