--- a/css/styles.css
+++ b/css/styles.css
@@ -114,9 +114,13 @@ body {
       .address-item:focus {
         color: #404bbf;
     }
+/*Main*/
 
     .solutions{
-      background-color:var(--solutions)
+      background-color:var(--solutions);
+      width: 1440px;
+      padding: 188px 0 ;
+      margin: 0 auto;
     }
 
     .title{
@@ -125,6 +129,9 @@ body {
       text-align: center;
       letter-spacing: 0.02em;
       color: #ffffff;
+      max-width: 496px;
+      margin-bottom: 48px;
+    
     }
 
     .order{
@@ -136,6 +143,12 @@ body {
       letter-spacing: 0.04em;
       color: #ffffff;
       cursor: pointer;
+      display: block;
+      min-width: 169px;
+      height: 56px;
+      border: none;
+      border-radius: 4px;
+
     }
 
     .order:hover, 
