--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,10 @@ button { cursor: pointer;}
   margin-right: auto;
   padding: 0 15px;
 }
+
+.visually-hidden {
+  display: none;
+}
 .header {
   border-bottom: 1px solid #e7e9fc;
 }
@@ -49,6 +53,7 @@ button { cursor: pointer;}
   display: flex;
   margin-right: 332px;
   padding: 24px 0 ;
+  gap: 40px;
 }
 
 body {
