--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,6 @@ body {
         list-style: none;
         display: flex;
         gap: 24px;;
-
     }
 
     .link-list{
@@ -130,6 +129,19 @@ body {
       margin: 0 auto;
     }
 
+    .visually-hidden {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      margin: -1px;
+      border: 0;
+      padding: 0;
+      white-space: nowrap;
+      clip-path: inset(100%);
+      clip: rect(0 0 0 0);
+      overflow: hidden;
+    }
+
       .title{
       font-size: 56px;
       line-height: 1.07;
@@ -138,7 +150,6 @@ body {
       color: #ffffff;
       max-width: 496px;
       margin-bottom: 48px;
-    
     }
 
     .order{
