--- a/css/styles.css
+++ b/css/styles.css
@@ -268,7 +268,7 @@ body {
       padding: 100px 0;
     }
 
-    .footer-logo-first {
+    .footer-logo {
       display: inline-block;
       margin: 0 0 16px 0;}
 
