--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+body {
+  font-family:"Roboto",sans-serif;
+  color: var(--address-color);
+  background-color: #FFFFFF; 
+    }
 
 :root {
 --text-color: #4d5ae5;
@@ -13,29 +18,35 @@ h2,
 h3,
 h4,
 p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
-ul,li {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
+ul {
+  margin: 0;
+  padding: 0;
 }
-img { display: block;}
 
-button { cursor: pointer;}
+.list {
+  list-style: none;
+} 
+
+.link {
+  text-decoration: none;
+}
+
+img { display: block;
+      max-width: 100%;
+      height: auto;
+}
 
 .container {
   width: 1158px;
   margin-left: auto;
   margin-right: auto;
   padding: 0 15px;
+  /* outline: 2px solid red; */
 }
 
-.visually-hidden {
-  display: none;
-}
 .header {
   border-bottom: 1px solid #e7e9fc;
 }
@@ -50,52 +61,36 @@ button { cursor: pointer;}
 }
 
 .header-list {
-  display: block;
-  margin-right: 332px;
-  padding: 24px 0 ;
-  gap: 40px;
-}
+  display: flex;
+  align-items: center;}
 
-body {
-    font-family:"Roboto",sans-serif;
-    color: var(--address-color);
-    background-color: #FFFFFF; 
-      }
-
-.logo {
+.logo-up {
     font-family: "Raleway", sans-serif;
     font-weight: 800;
     font-size: 18px;
+    font-style: normal;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--text-color);
     margin-right: 76px;
-    display: inline-block;
+    display: flex;
+    align-items: center;
     }
-
-  .link {
-    text-decoration: none;
-    padding: 24px 0 ;
-    gap: 40px;
-  }
 
     span {
     color: var(--span-color);
-    }
-
-    .list {
-        list-style: none;
-        display: flex;
-        gap: 24px;;
+    margin: 0 auto;
     }
 
     .link-list{
+        display: flex;
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: var(--link-list-color);
+        padding: 24px 0;
     }
 
     .nav-item:not(:last-child) {
@@ -109,13 +104,21 @@ body {
     }
     .address-list {
       display: flex;
-      gap: 40px;
+    }
+    .address-item:not(:last-child) {
+      margin-right: 40px;
     }
 
-    .address-item{
+    .address-link {
         line-height: 1.5;
         letter-spacing: 0.02em;
          color: var(--address-color) ;
+         padding-top: 24px;
+         padding-bottom: 24px;
+         font-family: inherit;
+         font-style: normal;
+         font-weight: 400;
+         font-style: 16px;
     }
 
     .link-list:hover,
@@ -131,9 +134,8 @@ body {
 
     .solutions{
       background-color:var(--solutions);
-      width: 1440px;
       padding: 188px 0 ;
-      margin: 0 auto;
+      align-items: center;
     }
 
     .visually-hidden {
@@ -161,8 +163,8 @@ body {
       margin-right: auto;
     }
 
-    .order{
-      background-color: #4D5AE5 ;
+    .order {
+      background: #4D5AE5 ;
       font-family: "Roboto", sans-serif;
       font-weight: 500;
       font-size: 16px;
@@ -175,7 +177,9 @@ body {
       height: 56px;
       border: none;
       border-radius: 4px;
-
+      margin-left: auto;
+      margin-right: auto;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     }
 
     .order:hover, 
@@ -187,6 +191,14 @@ body {
       padding: 120px 0;
     }
 
+    .container-work {
+      display: flex;
+    }
+
+    .work-list{
+      display: flex;
+      gap: 24px;
+    }
     .strategy {
       font-weight: 500;
       font-size: 20px;
@@ -194,8 +206,7 @@ body {
       letter-spacing: 0.02em;
       color: var(--solutions);
       margin-bottom: 8px;
-      text-align: center;
-      }
+          }
 
     .ourgoal {
       line-height: 1.5;
@@ -203,6 +214,13 @@ body {
       width: 264px;
     }
 
+    .our-offers {
+      padding-bottom: 120px;
+    }
+    .offers-list {
+      display: flex;
+      gap: 24px;
+    }
     .whatwedo {
       font-size: 36px;
       line-height: 1.11;
@@ -212,27 +230,19 @@ body {
       margin-bottom: 72px;
     }
 
-    .our-offers {
-      padding-bottom: 120px;
-    }
-
     .products {
       width: calc((100% - 48px) / 3);
     }
 
     .team {
-      background-color: #F4F4FD;
-      padding: 120px 0;
+      padding-bottom: 120px;
+      padding-top: 120px;
+      background: #F4F4FD;
     }
 
-    .team_list {
-      font-size: 36px;
-      line-height: 1.11;
-      text-align: center;
-      letter-spacing: 0.02em;
-      text-transform: capitalize;
-      color: var(--solutions);
-      margin-bottom: 72px;
+    .team-list {
+      display: flex;
+      gap: 24px;
     }
 
     .member {
@@ -240,11 +250,13 @@ body {
       flex-direction: column;
       align-items: center;
       padding: 32px 16px;
-      width: 232px;
+      min-width: 232px;
     }
 
     .mark {
       background-color: #FFFFFF;
+      border-radius: 0px 0px 4px 4px;
+      width: calc((100% - 72px) / 4);
     }
 
     .mark {
@@ -255,8 +267,19 @@ body {
       color: var(--solutions);
       border-radius: 0px 0px 4px 4px;
     }
+    .team-strategy {
+      display: flex;
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 1.2;
+      letter-spacing: 0.02em;
+      color: var(--solutions);
+      margin-bottom: 8px;
+      text-align: center;
+          }
 
     .designer {
+      display: flex;
       font-size: 16px;
       line-height: 1.5 ;
       letter-spacing: 0.02em;
@@ -267,21 +290,41 @@ body {
       background-color: var(--solutions);
       padding: 100px 0;
     }
+    .footer-containe {
 
+    }
     .footer-logo {
       display: inline-block;
-      margin: 0 0 16px 0;}
+      margin: 0 0 16px 0;
+      color: #4d5ae5;
+    }
 
       .footer-text {
         max-width: 264px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #F4F4FD;
       }
 
     .studio {
+      display: inline-block;
+      margin: 0;
       color: #f4f4fd;
     }
 
     .web {
       color: var(--span-color);
+    }
+/*  Portfolio */
+
+    .portfolio {
+    padding: 96px 0 120px 0;
+    }
+    .button-list {
+      display: flex;
+      gap: 24px;
+      justify-content: center;
+      margin-bottom: 72px;
     }
 
     .button-item {
@@ -290,24 +333,47 @@ body {
       font-size: 16px;
       line-height: 1.5;
       letter-spacing: 0.04em;
-      border: none;
-      width: 169px;
-      display: flex;
+      display: block;
       color: var(--text-color);
-      background-color: var(--button);
+      background: var(--button);
       margin-left: auto;
       margin-right: auto;
+      border-radius: 4px;
+      justify-content: center;
+      align-items: center;
+      padding: 12px 24px;
+      cursor: pointer;
+      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+      border: 1px solid #e7e9fc;
     
     }
 
     .button-item:hover {
       color:#FFFFFF ;
       background-color: #404BBF;
+      border: 1px solid transparent;
     }
 
     .button-item:focus {
       color:#FFFFFF ;
       background-color: #404BBF;
+      border: 1px solid transparent;
+    }
+    .image-list {
+      display: flex;
+      flex-wrap: wrap;
+      column-gap: 24px;
+      row-gap: 48px;
+    }
+    .image-item {
+      width: calc((100% - 48px) / 3);
+      border: 1px solid #e7e9fc;
+    }
+
+    .container-item  {
+      padding: 32px 16px;
+      border: 1px solid #e7e9fc;
+      border-top: none;
     }
 
     .image-title {
@@ -316,10 +382,10 @@ body {
       line-height: 1.2;
       letter-spacing: 0.02em;
       color: var(--link-list-color);
+      margin-bottom: 8px;
     }
     
     .image-text{
-      font-size: 16px;
       line-height: 1.5;
       letter-spacing: 0.02em;
       color: var(--address-color);
