--- a/css/styles.css
+++ b/css/styles.css
@@ -279,6 +279,7 @@ img { display: block;
           }
 
     .designer {
+      font-weight: 400;
       display: flex;
       font-size: 16px;
       line-height: 1.5 ;
